--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
+    "@neondatabase/serverless": "^0.10.4",
     "@nextui-org/button": "^2.2.7",
     "@nextui-org/input": "^2.4.7",
     "@nextui-org/navbar": "^2.2.5",
     "@nextui-org/react": "^2.6.8",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
+    "drizzle-orm": "^0.38.3",
     "framer-motion": "^11.15.0",
     "next": "15.1.2",
     "react": "^19.0.0",
@@ -25,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.30.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
