--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@nextui-org/button": "^2.2.7",
     "@nextui-org/input": "^2.4.7",
+    "@nextui-org/modal": "^2.2.6",
     "@nextui-org/navbar": "^2.2.5",
     "@nextui-org/react": "^2.6.8",
     "@nextui-org/system": "^2.4.4",
@@ -24,7 +25,8 @@
     "framer-motion": "^11.15.0",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid4": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
