--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
     "@nextui-org/button": "^2.2.7",
+    "@nextui-org/card": "^2.2.8",
     "@nextui-org/input": "^2.4.7",
     "@nextui-org/modal": "^2.2.6",
     "@nextui-org/navbar": "^2.2.5",
