--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
+    "noEmit": false, // chuyển true thành false để build ra file js
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node", // thay đổi từ bundler thành node 
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",  // Thay đổi preserve thành react-jsx cho Next.js
     "incremental": true,
     "plugins": [
       {
