--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,21 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": false, // chuyển true thành false để build ra file js
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node", // thay đổi từ bundler thành node 
+    "moduleResolution": "node", // thay đổi từ bundler thành node
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",  // Thay đổi preserve thành react-jsx cho Next.js
+    "jsx": "preserve", // Thay đổi preserve thành react-jsx cho Next.js
     "incremental": true,
     "plugins": [
       {
@@ -19,9 +23,18 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
